@@ -62,6 +62,9 @@ glibc (2.29-0experimental0) UNRELEASED; urgency=medium
   * debian/rules: drop -no-pie -fno-PIE options. This is now fully supported
     by the GNU libc.
 
+  [ Sven Mueller ]
+  * debian/rules: honor noudeb build profile.
+
  -- Adam Conrad <adconrad@0c3.net>  Wed, 20 Feb 2019 01:22:52 -0700
 
 glibc (2.28-10) unstable; urgency=medium
